--- a/client/src/pages/Map.css
+++ b/client/src/pages/Map.css
@@ -144,8 +144,8 @@
     left: 0;
     right: 0;
     width: 100%;
-    height: 65px;
-    padding-top: 0;
+    height: calc(65px + env(safe-area-inset-top, 0px));
+    padding-top: env(safe-area-inset-top, 0px);
     box-sizing: border-box;
     padding-left: 1.2rem;
     padding-right: 1.2rem;
